Heroku Image First

--- a/src/app/portal-login/portal-login.component.html
+++ b/src/app/portal-login/portal-login.component.html
@@ -1,5 +1,5 @@
 
-<img src="public/images/ACA-Virtual-Platform-Login.jpg" class="img-fluid" style="width: 100%; height: auto"/>
+<img src={{loginBackground}} class="img-fluid" style="width: 100%; height: auto"/>
 
 
 
