--- a/src/app/portal-login/portal-login.component.html
+++ b/src/app/portal-login/portal-login.component.html
@@ -1,5 +1,42 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
+  <span class="navbar-brand" href="#">Navbar</span>
 
-<img src={{loginBackground}} class="img-fluid" style="width: 100%; height: auto"/>
+
+</nav>
+
+
+<div class="row justify-content-md-center">
 
 
 
+
+  <div class="shadow-sm p-3 mb-5 bg-white rounded justify-content-md-center col-lg-3 col-md-5 col-sm-6 col-xs-12 " style="margin-top:10%;     background: linear-gradient(180deg, #FFFFFF 68%, #EDFAFC 50%);
+">
+    <form>
+
+    <div >
+    <span >Log in and get to work</span>
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon1">@</span>
+        </div>
+        <input type="email" class="form-control" id="username" placeholder="Ingrese Correo Electrónico" required>
+      </div>
+      <div class="input-group mb-3">
+        <div class="input-group-prepend">
+          <span class="input-group-text" id="basic-addon1">@</span>
+        </div>
+    <input type="password" class="form-control" id="password" placeholder="Introducir la Contraseña" required>
+      </div>
+    <button type="submit" class="btn-primary btn-responsive" style="margin-top: 25px; background-color: #374785">Login</button>
+  </div>
+    </form>
+    <hr>
+
+    <div >
+      <button class="btn-primary btn-responsive" style="margin-top: 25px; background-color: #FFFFFF">Register</button>
+
+    </div>
+  </div>
+
+</div>
