--- a/src/app/portal-login/portal-login.component.html
+++ b/src/app/portal-login/portal-login.component.html
@@ -1,18 +1,17 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
-  <span class="navbar-brand" href="#">Navbar</span>
-
-
-</nav>
-
-
-<div class="row justify-content-md-center">
 
 
 
+<div class="h-100  justify-content-md-center  m-xl-5 m-lg-5 m-md-5 " style="height: 100%;   display: flex;
+  flex-wrap: wrap;
+  margin-right: -8px;
+  margin-left: -7px;">
 
-  <div class="shadow-sm p-3 mb-5 bg-white rounded justify-content-md-center col-lg-3 col-md-5 col-sm-6 col-xs-12 " style="margin-top:10%;     background: linear-gradient(180deg, #FFFFFF 68%, #EDFAFC 50%);
+
+
+
+  <div class=" divHeight shadow-sm p-3  bg-white rounded  col-xl-4 col-lg-5 col-md-6 col-sm-12 col-xs-12  " style="    background: linear-gradient(180deg, #FFFFFF 68%, #EDFAFC 50%);
 ">
-    <form>
+    <form class="form-group">
 
     <div >
     <span >Log in and get to work</span>
