--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+  <a class="navbar-brand" href="#">ACAE</a>
 
-<div class="container-fluid">
+
+</nav>
+<div class="h-100 container-fluid" style="padding: 42px 0px 0px">
 
 <app-portal-login></app-portal-login>
 </div>
+<footer class="footer d-flex">
+
+    <p style="text-align: center; width:100%; height:50%; margin-top: 25%">Copyright</p>
+</footer>
