Mechanics for Utility Pages

--- a/src/app/portal-login/portal-login.component.html
+++ b/src/app/portal-login/portal-login.component.html
@@ -1,39 +1,35 @@
 
 
 
-<div class="divHeight  justify-content-md-center  m-xl-5 m-lg-5 m-md-5 " style="   display: flex;
+<div class="LoginDiv divHeight  justify-content-md-center  m-xl-5 m-lg-5 m-md-5 " style="margin: 55px 0px 0px 0px;   display: flex;
   flex-wrap: wrap;
-  margin-right: -8px;
-  margin-left: -7px;">
+ ">
 
 
 
 
-  <div class=" divHeight shadow-sm p-3  bg-white rounded  col-xl-4 col-lg-5 col-md-6 col-sm-12 col-xs-12  " style="    background: linear-gradient(180deg, #FFFFFF 76%, #EDFAFC 25%);
-">
-    <form class="form-group" style="height:75%">
+  <div class=" Resize divHeight col-xxl col-xl-4 col-lg-5 col-md-6 col-sm-12 col-xs-12
+" style=" padding-left: 0px;
+  padding-right:0px; ">
+    <form class="shadow-lg form-group bg-white topRounded" style="width:100%; margin-bottom:0px;">
 
-    <div  >
+    <div >
     <h2 style="float:right; width:100%;text-align:center" >Iniciar Sesión y Ponerse a Trabajar
     </h2>
-      <div class="input-group mb-3">
-        <span class="input-group-text fa fa-user" id="basic-addon1"></span>
+      <div class=" inputResponsive input-group mb-3">
+        <span class="iconSpan input-group-addon" ><i class="  fa fa-user"  style="color:blue"></i></span>
 
-        <input type="email" class="inputstyle form-control" id="username" placeholder="Ingrese Correo Electrónico" required>
-      </div>
-      <div class="input-group mb-3">
-        <div class="input-group-prepend">
-          <i class=""></i>
-          <span class="input-group-text fa fa-key" id="basic-addon1"></span>
-        </div>
-    <input type="password" class="inputstyle form-control" id="password" placeholder="Introducir la Contraseña" required>
+        <input type="email" class="  inputItem inputstyle form-control" id="username" placeholder="Ingrese Correo Electrónico" required>
+
+      </div >
+      <div class=" inputResponsive input-group mb-3">
+        <span class="iconSpan input-group-addon" ><i class="  fa fa-key" style="color:blue" ></i></span>
+    <input type="password" class="  inputItem inputstyle form-control" id="password" placeholder="Introducir la Contraseña" required>
       </div>
     <button type="submit" class="btn btn-primary btn-responsive" style="margin-top: 25px; background-color: #374785">Login</button>
   </div>
     </form>
-    <hr >
-
-    <div style="height:25% ">
+    <div class="shadow-sm   bottomRounded " style="background-color:red; height: 100%; padding-bottom:45px;">
       <span style="float:right; width:100%;text-align:center; padding-bottom:15px;" >Want to Join?</span>
       <button class="btn btn-primary btn-responsive" style=" background-color: #FFFFFF; position: relative; ">Register</button>
 
