--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,14 @@
-<nav class="shadow-sm navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="shadow-sm navbar navbar-expand-md navbar-dark fixed-top bg-dark" style="z-index: 6; position:absolute;" >
   <a class="navbar-brand" href="#">ACAE</a>
 
 
 </nav>
-<div class="h-100 container-fluid" style="padding: 42px 0px 0px">
+<div  style=" flex:1; background-color:#20B2AA; overflow:hidden; position:relative">
 
 <app-portal-login></app-portal-login>
 </div>
-<footer class="footer d-flex">
-
-    <p style="text-align: center; width:100%; height:50%; margin-top: 25%">Copyright</p>
+<footer class="footer" style="position:absolute">
+  <div class="container">
+    <span class="text-muted">Place sticky footer content here.</span>
+  </div>
 </footer>
