--- a/src/app/portal-login/portal-login.component.css
+++ b/src/app/portal-login/portal-login.component.css
@@ -16,16 +16,57 @@
 
   @media (max-width: 768px) {
     .btn-responsive {
-      padding:2px 4px;
-      font-size:80%;
+      padding: 2px 4px;
+      font-size: 80%;
       line-height: 1;
       width: 100%;
       height: 50px;
 
     }
 
-  }
+    .inputResponsive {
 
+    }
+
+    .Resize {
+      margin: 0px;
+    }
+
+    .divHeight {
+      height: 100%;
+      margin-bottom: 0px;
+      display: grid;
+
+    }
+
+    .LoginDiv {
+      height: calc(100% - 95px);
+    }
+  }
+    @media (min-width: 2000px) {
+      .col-xxl {
+        flex: 0 0 25.333333%;
+        max-width: 25.333333%;
+      }
+    }
+    @media (min-width: 3000px) {
+      .col-xxl {
+        flex: 0 0 17.333333%;
+        max-width: 17.333333%;
+      }
+    }
+    @media (min-width: 4000px) {
+      .col-xxl {
+        flex: 0 0 15.333333%;
+        max-width: 15.333333%;
+      }
+    }
+    @media (min-width: 5000px) {
+      .col-xxl {
+        flex: 0 0  10.333333%;
+        max-width: 10.333333%;
+      }
+    }
   @media (min-width: 769px) {
     .btn-responsive {
       margin-left: 30%;
@@ -36,17 +77,29 @@
       height: 40px;
 
     }
+    .inputResponsive{
+           width:50%;
+      margin-left:25%;
+         }
+    .divHeight{
+      display:table;
+    }
+    .Resize{
+      margin: 30px;
+    }
+  }
 
-  }
-@media (min-width: 769px) {
-  .divHeight{
-    height: 50vh;
-  }
+
+
+
+
+.topRounded{
+  border-top-left-radius: .25rem!important;
+  border-top-right-radius: .25rem!important;
 }
-@media (max-width: 768px) {
-  .divHeight{
-    height: 100%;
-  }
+.bottomRounded{
+  border-bottom-left-radius: .25rem!important;
+  border-bottom-right-radius: .25rem!important;
 }
 .inputstyle{
 
@@ -62,4 +115,15 @@ inputstyle::-moz-placeholder {
 }
 inputstyle:-ms-input-placeholder {
   font-style: italic;
+}
+.iconSpan{
+  position: absolute;
+  margin-left: 10px;
+  display: flex;
+  height:100%;
+  align-items: center;
+  z-index: 5;
+}
+.inputItem{
+  padding-left: 25px;
 }
